--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,12 @@
 <%- include('partials/head')  %>
   <%- include('partials/navbar')  %>
-  <form class="form-inline my-2 my-lg-0" action = "/searchuser" method = "get">
-    <input class="form-control mr-sm-2" placeholder= "Search" type= "text" name = "usertag">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
+  <div class="container">
+    <header>
+      <h1><b>Welcome to SkillSync AI</b></h1>
+      <br>
+      <p>Interact with the chatbot based on your uploaded resume!</p>
+      <p>This is a server-side application for a Chatbot Resume App. The app allows users to create profiles, upload resumes in PDF format, converts them to text, and allows other users to interact with a Chatbot that was created based on the users profile. Users can send messages to the chatbot, which responds based on the content of the uploaded resumes.</p>
+  </header>
+  </div>
+  
   <%- include('partials/footer')  %>
