--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,9 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Express</title>
+  <title>SkillSync AI</title>
   <link rel ='stylesheet' href="/css/bootstrap.min.css">
   <script src = "/js/jquery.js"></script>
   <script src = "/js/bootstrap.min.js"></script>
+  <style>
+
+        .search-form {
+          align-items: flex-end;
+          display: flex;
+          flex-direction: row;
+        }
+  
+        body {
+
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin-top: 0px;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            text-align: center;
+            padding: 80px 0;
+            color: #000;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+            letter-spacing: 2px;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin: 0;
+            line-height: 1.5;
+        }
+  </style>
 </head>
 <body>
